# edgefit-ar

./: .gitignore  README.md  makefile  requirements.txt
ar_interface/: web_simulator.py
ar_interface/templates/: ar_interface.html
config/: app_config.yaml  deployment.yaml  model_config.yaml
data_engine/: preprocessing.py  setup_datasets.py
edge_gateway/api/: connection_manager.py  data_adapter.py  main.py  model_manager.py
edge_gateway/rust_engine/: Cargo.toml  build.py  pyproject.toml
edge_gateway/rust_engine/src/: features.rs  health.rs  inference.rs  lib.rs  pose.rs
hardware_simulator/: ar_simulator.py  data_generator.py  sensor_emulator.py
training/: train_model.py
